@@ -1,3 +1,8 @@
+2008-09-25  Stefan Jahn  <stefan@lkcc.org>
+
+	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented
+	length() and ddx().
+
 2008-08-04  Stefan Jahn  <stefan@lkcc.org>
 
 	* htmldatafetcher.cpp (fetchChapterTexts): Avoid collecting
